--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -116,6 +116,15 @@
                     <%= unsubscribedUsersCount %>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-10">
+                    <p>Počet uživatelů neodebírajících streak upomínky</p>
+                </div>
+                <div class="col-md-2">
+                    <%= hasUnsubscribedFromStreak %>
+                </div>
+            </div>
+            <hr>
             
             <div class="row">
                 <div class="col-md-10">
