--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -43,6 +43,10 @@ body {
     box-shadow: 0 0 0 2px rgba(0, 0, 0, 0);
 }
 
+.hidden {
+    display: none;
+}
+
 /*CATEGORY*/
 
 .section-list .add-icon {
@@ -444,10 +448,6 @@ form .form-borders {
     margin-bottom: 0px;
 }
 
-.clash-item .name {
-
-}
-
 .clash-icon {
     background-color: #EEEEEE;
     width: 4.5rem;
@@ -461,6 +461,76 @@ form .form-borders {
 .clash-icon img {
     width: 60%;
     height: 60%;
+}
+
+/* STARS RATING*/
+.rate {
+    float: left;
+    height: 46px;
+    padding: 0 10px;
+}
+.rate:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+}
+.rate:not(:checked) > label {
+    float:right;
+    width:1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:1.5rem;
+    color:#ccc;
+}
+.rate:not(:checked) > label:before {
+    content: '★ ';
+}
+.rate > input:checked ~ label {
+    color: #E80F88;    
+}
+.rate:not(:checked) > label:hover,
+.rate:not(:checked) > label:hover ~ label {
+    color: #E80F88;  
+}
+.rate > input:checked + label:hover,
+.rate > input:checked + label:hover ~ label,
+.rate > input:checked ~ label:hover,
+.rate > input:checked ~ label:hover ~ label,
+.rate > label:hover ~ input:checked ~ label {
+    color: #E80F88;
+}
+
+#feedback-textarea {
+    border-radius: 8px;
+    margin-bottom: 1rem;
+}
+
+/* INVOICE */
+.invoice-box {
+    margin-top: 4rem;
+    padding: 1rem;
+}
+
+.invoice-box .header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.invoice-box .titles {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
+
+.invoice-box .body {
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+}
+
+.invoice-box .footer {
+    text-align: center;
+    margin-top: 2rem;
 }
 
 @media only screen and (max-width: 1200px) {
