--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,6 +15,7 @@
                 <li><a class="dropdown-item" href="/admin/admin">Admin</a></li>
                 <li><a class="dropdown-item" href="/admin/users">Uživatelé</a></li>
                 <li><a class="dropdown-item" href="/invoices/open">Fakturace</a></li>
+                <li><a class="dropdown-item" href="/admin/ratings?order=cards">Hodnocení</a></li>
                 <li><a class="dropdown-item" href="/admin/email">Email</a></li>
                 <li><a class="dropdown-item" href="/admin/categories">Předměty</a></li>
               </ul>
