--- a/views/sections/finishedLive.ejs
+++ b/views/sections/finishedLive.ejs
@@ -21,6 +21,27 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-12">
+                        <p class="mb-0">Jaká byla kvalita kartiček v tomto balíčku?</p>
+                        <div id="rating-type" name="cards"></div>
+                        <form class="d-flex justify-content-center" id="rating-form" name="<%= section._id %>">
+                            <div class="rate">
+                                <input class="radio-btn-rating" type="radio" id="star5" name="rate" value="5" />
+                                <label for="star5" title="text">5 stars</label>
+                                <input class="radio-btn-rating" type="radio" id="star4" name="rate" value="4" />
+                                <label for="star4" title="text">4 stars</label>
+                                <input class="radio-btn-rating" type="radio" id="star3" name="rate" value="3" />
+                                <label for="star3" title="text">3 stars</label>
+                                <input class="radio-btn-rating" type="radio" id="star2" name="rate" value="2" />
+                                <label for="star2" title="text">2 stars</label>
+                                <input class="radio-btn-rating" type="radio" id="star1" name="rate" value="1" />
+                                <label for="star1" title="text">1 star</label>
+                            </div>
+                        </form>
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#text-feedback-modal" class="text-smaller hidden" id="text-feedback-link">Přidat slovní hodnocení</a>
+                    </div>
+                </div>
                 <% if (section.questions.length > 0 && section.testIsPublic) { %>
                     <div class="row">
                         <div class="col-12">
@@ -73,5 +94,21 @@
                 <% } %>
             </div>
         </div>
+    </div>
+</div>
+
+<!-- MODAL - Feedback -->
+<div class="modal fade" id="text-feedback-modal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered edit-modal">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title">Zpětná vazba k balíčku</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body d-flex flex-column justify-content-center align-items-center">
+            <textarea class="form-control border rounded-corners" id="feedback-textarea" name="feedback-textarea" cols="30" rows="5" placeholder="Má tento balíček nějaké slabiny? Dej nám vědět a mi na tom zapracujeme..."></textarea>
+            <button class="btn btn-sm btn-danger" id="submit-text-feedback">Odeslat</button>
+        </div>
+    </div>
     </div>
 </div>
