--- a/views/invoices/issuedFull.ejs
+++ b/views/invoices/issuedFull.ejs
@@ -18,7 +18,7 @@
                   </div>
                   <p class="text-bold">Účtenka</p>
                   <div class="text-smaller text-muted">
-                    <p class="mb-0 d-flex justify-content-between"><span>Číslo dokladu:</span> <span><%= invoice.identificationNumber %></span></p>
+                    <p class="mb-0 d-flex justify-content-between"><span>Číslo dokladu:</span> <span>CZ<%= invoice.identificationNumber %></span></p>
                     <p>Datum vystavení: <%= invoice.dateIssued %></p>
                   </div>
                 </div>
