--- a/views/admin/showUserDetail.ejs
+++ b/views/admin/showUserDetail.ejs
@@ -314,7 +314,7 @@
                     </div>
                 </div>
                 <div class="row px-3 pb-3">
-                    <% if(user.invoices.length === 0){ %>
+                    <% if(user.invoices.length === 0 && user.invoicesDbObjects.length === 0){ %>
                         <p class="text-center text-muted">Uživatel nemá vystaveny žádné faktury.</p>
                         <p class="px-3 text-center text-small text-muted">Na tomto místě se zobrazují platby od 1. 1. 2024. Doklady o předchozích platbách byly zasílány e-mailem.</p>
 
