--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -171,7 +171,7 @@
                     </div>
                 </div>
                 <div class="row p-3 pt-1">
-                    <% if(user.invoices.length === 0){ %>
+                    <% if(user.invoices.length === 0  && user.invoicesDbObjects.length === 0){ %>
                         <p class="text-center text-muted">Zatím nemáš žádné potvrzení o platbách.</p>
                         <p class="px-3 text-center text-small text-muted mt-3">Na tomto místě se zobrazují potvrzení o platbách od 1. 1. 2024. Potvrzení o předchozích platbách najdeš ve svém e-mailu. Vystavení potvrzení může trvat až tři pracovní dny.</p>
 
