--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap_customised.css">
-    <link rel="stylesheet" href="/css/custom.css">
-    <link rel="stylesheet" href="/css/landing.css">
+    <link rel="stylesheet" href="/css/custom.css?x">
+    <link rel="stylesheet" href="/css/landing.css?x">
     <!-- META TAGS -->
     <meta name="description"               content="<%= texts.header.description %>">
     <meta name="author"                    content="<%= texts.header.author %>">
