--- a/public/css/question.css
+++ b/public/css/question.css
@@ -2,6 +2,17 @@
     max-height: 185px;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+#questions-list::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  #questions-list {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
 .question-card-wrapper {
     border: 1px solid #DFDFDF;
     border-radius: 0.25rem;
