--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap_customised.css">
-    <link rel="stylesheet" href="/css/custom.css?x">
-    <link rel="stylesheet" href="/css/landing.css?x">
+    <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/landing.css">
     <!-- META TAGS -->
     <meta name="description"               content="<%= texts.header.description %>">
     <meta name="author"                    content="<%= texts.header.author %>">
@@ -335,6 +335,7 @@
     <script src="https://kit.fontawesome.com/c9f8e59b45.js" crossorigin="anonymous"></script>
     <script src="/js/jquery.min.js" ></script>
     <script type="text/javascript" src="/js/cookies.js"></script>
+    <script type="text/javascript" src="/js/landing.js"></script>
 </body>
 </html>
 
