--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -51,6 +51,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/clash/soubojfakult">Souboj fakult <span class="badge rounded-pill bg-danger">New</span></a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/leaderboard">Žebříček <span class="badge rounded-pill bg-danger">New</span></a>
+                  </li>
                 <% } %>
                 <% if (!currentUser) { %>
                 <li class="nav-item">
