--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -430,6 +430,7 @@
         <script type="text/javascript" src="/js/payments.js"></script>
     <% } %>
     <script type="text/javascript" src="/js/cookies.js"></script>
+    <script type="text/javascript" src="/js/custom.js"></script>
 </body>
 </html>
 
