--- a/views/about.ejs
+++ b/views/about.ejs
@@ -199,6 +199,7 @@
     <script src="https://kit.fontawesome.com/c9f8e59b45.js" crossorigin="anonymous"></script>
     <script src="/js/jquery.min.js" ></script>
     <script type="text/javascript" src="/js/cookies.js"></script>
+    <script type="text/javascript" src="/js/custom.js"></script>
 </body>
 </html>
 
