--- a/views/cards/show20shuffle.ejs
+++ b/views/cards/show20shuffle.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=no">
-  <title>InLege - Studuj práva efektivně</title>
+  <title>Kartičky Shuffle</title>
   <!-- META TAGS -->
   <meta name="description"               content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
   <meta name="author"                    content="Chilero s. r. o.">
