--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -27,6 +27,18 @@
                     </div>
                     <hr />
                     <div class="col-4 fw-bold d-flex align-items-center">
+                        <p>Přezdívka (do žebříčku)</p>
+                    </div>
+                    <div class="col-8 d-flex justify-content-between align-items-center">
+                        <% if (user.nickname) { %>
+                            <p class=""><%= user.nickname %></p>
+                        <% } else { %>
+                            <p class="">není nastavena</p>
+                        <% } %>
+                        <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#modal-nickname" style="margin-bottom: 5px">Změnit</button>
+                    </div>
+                    <hr />
+                    <div class="col-4 fw-bold d-flex align-items-center">
                         <p>Fakulta</p>
                     </div>
                     <div class="col-8 d-flex justify-content-between align-items-center">
@@ -322,6 +334,30 @@
                 Uložit
             </button>
             </div>
+        </form>
+    </div>
+    </div>
+</div>
+
+<!-- Set nickname modal -->
+<div class="modal fade" id="modal-nickname" tabindex="-1" aria-labelledby="modalWarning" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title">Nastavit přezdívku pro žebříček</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form action="/auth/user/changeNickname" method="POST" class="m-lg-3 m-2">
+            <div class="modal-body">
+                <input type="text" class="form-control bordered" id="nickname" name="nickname" value="<%= currentUser.nickname %>" maxlength="16" required>
+                <p class="text-small text-muted p-2 mb-0">maximálně 16 znaků</p>
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-danger" type="submit">
+                        Uložit
+                    </button>
+                </div>
+            </div>
+            
         </form>
     </div>
     </div>
