--- a/views/clash.ejs
+++ b/views/clash.ejs
@@ -1,110 +1,154 @@
-<% layout ('layouts/boilerplate.ejs') %>
-    <div class="container">
-        <div class="row mb-5">
-            <div class="col-lg-8 offset-lg-2">
-                <div class="card">
-                    <div class="row p-3 pb-0">
-                        <div class="col-4 col-sm-2 d-flex justify-content-center">
-                            <div class="clash-icon">
-                                <img src="/img/icon_clash.png" alt="">
+<!DOCTYPE html>
+    <html lang="cs">
+        <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Souboj fakult</title>
+            <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+            <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+            <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+            <link rel="stylesheet" href="/css/bootstrap.min.css">
+            <link rel="stylesheet" href="/css/bootstrap_customised.css">
+            <link rel="stylesheet" href="/css/custom.css">
+            <link rel="stylesheet" href="/css/leaderboard.css">
+            <!-- META TAGS -->
+            <meta name="description"               content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
+            <meta name="author"                    content="Chilero s. r. o.">
+            <meta name="keywords"                  content="pravnicke, karticky, inlege, studium, prava, podklady, priprava">
+            <meta name="twitter:title"             content="Studuj práva efektivně s InLege">
+            <meta name="twitter:description"       content="Tisíce interaktivních právnických kartiček zdarma. Připrav se na zkoušky zábavnou formou!">
+            <meta name="twitter:image"             content="https://www.inlege.cz/img/fb_sharing.png">
+            <meta property="og:url"                content="https://www.inlege.cz/" />
+            <meta property="og:title"              content="InLege - Studuj právo efektivně!" />
+            <meta property="og:description"        content="Tisíce interaktivních kartiček zdarma. Všechny obory práva na jednom místě." />
+            <meta property="og:image"              content="/img/fb_sharing.png" />
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400&family=Roboto&display=swap" rel="stylesheet">
+        </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NNQ2L4K9C9"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-NNQ2L4K9C9');
+    gtag('config', 'AW-990983899');
+    </script>
+    <body class="d-flex flex-column vh-100">
+        <%- include('./partials/navbar') %> 
+        <main role="main">    
+            <%- include('./partials/alert') %>
+        <section class="">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 offset-md-2 text-center mt-5">
+                        <h1 class="headline">Souboj fakult</h1>
+                        <h4 class="lead-clash mb-4">Bojuj vzdělaností za čest a slávu své fakulty</h4>
+                        <% if (currentUser && (currentUser.faculty === "neuvedeno" || currentUser.faculty === "Neuvedeno")) { %>
+                            <div class="bottom-info text-larger mb-5">
+                                <p><i>Tvé body se zatím nepočítají, protože nemáš nastavenou fakultu. Nastavit si ji můžeš <a href="/auth/user/profile" class="profile-link">zde</a></i></p>
                             </div>
-                        </div>
-                        <div class="col-8 col-sm-10 mb-3">
-                            <h3>Souboj fakult</h3>
-                            <h5>Bojuj vzdělaností za čest a slávu své fakulty</h5>
-                        </div>
-                        <div class="col-12">
-                            <p>Každá nastudovaná kartička či zodpovězená otázka se počítá za <b>jeden bod</b>. Body všech studentů každé fakulty se sčítají. Kdo se stane šampionem tento měsíc?</p>
-                            <p><i>Nezapomeň si ve svém <a href="/auth/user/profile">profilu</a> ověřit, že máš <b>nastavenou fakultu</b> a tvé body se počítají!</i></p>
-                        </div>
+                        <% } %>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-8 offset-lg-2">
-                <div class="card">
-                    <div class="row p-3 pb-0">
-                        <div class="col-12">
-                            <h4>Průběžné pořadí tohoto měsíce</h4>
-                        </div>
-                        <% facultiesOrdered.forEach((faculty, i) => { %>
-                            <div class="col-6 col-sm-4 col-md-2 clash-item">
-                                <div class="number-wrapper">
-                                    <div class="number" style="min-height:<%= 5.5 - (i - (i * 0.4)) %>rem;min-width:<%= 5.5 - (i - (i * 0.4)) %>rem;font-size:<%= 1.5 - (i * 0.1)%>rem"><%= i + 1 %>.</div>
-                                </div>
-                                <p class="points"><%= faculty[1] %> b</p>
-                                <p class="text-center text-small text-muted">
-                                    <i> 
-                                        <% if (faculty[0] === "prfUp") { %><%= total.prfUp %><% } %>
-                                        <% if (faculty[0] === "prfUk") { %><%= total.prfUk %><% } %>
-                                        <% if (faculty[0] === "prfMuni") { %><%= total.prfMuni %><% } %>
-                                        <% if (faculty[0] === "prfZcu") { %><%= total.prfZcu %><% } %>
-                                        <% if (faculty[0] === "prfJina") { %><%= total.prfJina %><% } %>
-                                        <% if (faculty[0] === "prfNestuduji") { %><%= total.prfNestuduji %><% } %> 
-                                    studentů
-                                    </i>
-                                </p>
-                                <p class="name text-smaller text-center">
-                                    <% if (faculty[0] === "prfUp") { %>Právnická fakulta Univerzity Palackého<% } %>
-                                    <% if (faculty[0] === "prfUk") { %>Právnická fakulta Univerzity Karlovy<% } %>
-                                    <% if (faculty[0] === "prfMuni") { %>Právnická fakulta Masarykovy univerzity<% } %>
-                                    <% if (faculty[0] === "prfZcu") { %>Právnická fakulta Západočeské univerzity<% } %>
+        </section>
+        <section class="container">
+            <div class="row leaderboard-row">
+                <div class="col-lg-6 px-lg-4">
+                <h5 class="table-headline">Průběžné pořadí tohoto měsíce</h5>
+                <% facultiesOrdered.forEach((faculty, i) => { %>
+                    <div <% if(usersFaculty === faculty[0]){ %> class="leaderboard-item active-user" <% } else { %> class="leaderboard-item" <% } %>>
+                        <div class="d-flex flex-row align-items-center">
+                            <div style="min-width:60px;height:60px;" class="d-flex justify-content-center align-items-center text-muted">
+                                <% if (i === 0) { %>
+                                    <img src="/img/icon_first.png" alt="ikona_prvni" class="icon">
+                                <% } %>
+                                <% if (i === 1) { %>
+                                    <img src="/img/icon_second.png" alt="ikona_druhy" class="icon">
+                                <% } %>
+                                <% if (i === 2) { %>
+                                    <img src="/img/icon_third.png" alt="ikona_treti" class="icon">
+                                <% } %>
+                                <% if (i > 2) { %>
+                                    <span class="ranking"><%= i + 1 %></span>
+                                <% } %>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-between content" style="width:100%">
+                                <p class="nickname">
+                                    <% if (faculty[0] === "prfUp") { %>Prf UP<% } %>
+                                    <% if (faculty[0] === "prfUk") { %>PrF UK<% } %>
+                                    <% if (faculty[0] === "prfMuni") { %>PrF MUNI<% } %>
+                                    <% if (faculty[0] === "prfZcu") { %>PrF ZČU<% } %>
                                     <% if (faculty[0] === "prfJina") { %>Ostatní fakulty<% } %>
                                     <% if (faculty[0] === "prfNestuduji") { %>Absolventi a ostatní nestudující<% } %>
+                                    <% if (faculty[0] === "prfUchazec") { %>Uchazeči o studium<% } %>
                                 </p>
+                                <p class="points"><%= faculty[1] %></p>
                             </div>
-                        <% }) %>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row my-5">
-            <div class="col-lg-8 offset-lg-2">
-                <div class="card">
-                    <div class="row p-3 pb-0">
-                        <div class="col-12">
-                            <h4>Konečné pořadí za minulý měsíc</h4>
                         </div>
-                        <% facultiesPrevious.forEach((faculty, i) => { %>
-                            <div class="col-6 col-sm-4 col-md-2 clash-item">
-                                <div class="number-wrapper">
-                                    <div class="number last-month" style="min-height:<%= 5.5 - (i - (i * 0.4)) %>rem;min-width:<%= 5.5 - (i - (i * 0.4)) %>rem;font-size:<%= 1.5 - (i * 0.1)%>rem"><%= i + 1 %>.</div>
+                    </div>
+                <% }) %>
+                </div>
+                <div class="col-lg-6 px-lg-4">
+                    <h5 class="table-headline mt-4 mt-lg-0">Konečné pořadí za minulý měsíc</h5>
+                    <% facultiesPrevious.forEach((faculty, i) => { %>
+                        <div class="leaderboard-item"> 
+                            <div class="d-flex flex-row align-items-center">
+                                <div style="min-width:60px;height:60px;" class="d-flex justify-content-center align-items-center text-muted">
+                                    <% if (i === 0) { %>
+                                        <img src="/img/icon_first.png" alt="ikona_prvni" class="icon">
+                                    <% } %>
+                                    <% if (i === 1) { %>
+                                        <img src="/img/icon_second.png" alt="ikona_druhy" class="icon">
+                                    <% } %>
+                                    <% if (i === 2) { %>
+                                        <img src="/img/icon_third.png" alt="ikona_treti" class="icon">
+                                    <% } %>
+                                    <% if (i > 2) { %>
+                                        <span class="ranking"><%= i + 1 %></span>
+                                    <% } %>
                                 </div>
-                                <p class="points"><%= faculty[1] %> b</p>
-                                <p class="name text-smaller text-center">
-                                    <% if (faculty[0] === "prfUp") { %>Právnická fakulta Univerzity Palackého<% } %>
-                                    <% if (faculty[0] === "prfUk") { %>Právnická fakulta Univerzity Karlovy<% } %>
-                                    <% if (faculty[0] === "prfMuni") { %>Právnická fakulta Masarykovy Univerzity<% } %>
-                                    <% if (faculty[0] === "prfZcu") { %>Právnická fakulta Západočeské Univerzity<% } %>
-                                    <% if (faculty[0] === "prfJina") { %>Ostatní fakulty<% } %>
-                                    <% if (faculty[0] === "prfNestuduji") { %>Absolventi a ostatní nestudující<% } %>
-                                </p>
+                                <div class="d-flex align-items-center justify-content-between content" style="width:100%">
+                                    <p class="nickname">
+                                        <% if (faculty[0] === "prfUp") { %>Prf UP<% } %>
+                                        <% if (faculty[0] === "prfUk") { %>PrF UK<% } %>
+                                        <% if (faculty[0] === "prfMuni") { %>PrF MUNI<% } %>
+                                        <% if (faculty[0] === "prfZcu") { %>PrF ZČU<% } %>
+                                        <% if (faculty[0] === "prfJina") { %>Ostatní fakulty<% } %>
+                                        <% if (faculty[0] === "prfNestuduji") { %>Absolventi a ostatní nestudující<% } %>
+                                    </p>
+                                    <p class="points"><%= faculty[1] %></p>
+                                </div>
                             </div>
-                        <% }) %>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--
-        <div class="row mt-3">
-            <div class="col-lg-8 offset-lg-2">
-                <div class="card">
-                    <div class="row p-3 pb-0">
-                        <div class="col-12">
-                            <h3 class="p-3 mb-0">Souboj fakult</h3>
-                            <h5>Konečné výsledky za uplynulý měsíc (březen 2024)</h5>
-                            <% facultiesOrdered.forEach((faculty, i) => { %>
-                                <div>
-                                    <span><%= i + 1 %>.</span>
-                                    <span><% if (faculty[0] === "prfUp") { %>Právnická fakulta Univerzity Palackého<% } %></span>
-                                    <span>Body: <%= faculty[1] %></span>
-                                    </div>
-                            <% }) %>
                         </div>
-                    </div>
+                    <% }) %>
                 </div>
             </div>
-        </div>
-        -->
-    </div>
+            <div class="row">
+                <div class="offset-lg-2 col-lg-8 bottom-info text-larger">
+                    <p>Každá nastudovaná kartička či zodpovězená otázka se počítá za <b>jeden bod</b>. Body všech studentů každé fakulty se sčítají. Kdo se stane šampionem tento měsíc?</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    
+        <%- include('./partials/footer') %>
+        <%- include('./partials/cookiesBar')%> 
+
+        <!-- JS for Bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
+        <script src="/js/jquery.min.js" ></script>
+        <script src="https://kit.fontawesome.com/c9f8e59b45.js" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="/js/cookies.js"></script>
+    </body>
+</html>
+
+
+    
+
+    
