--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -40,6 +40,7 @@
     <body class="d-flex flex-column vh-100">
         <%- include('./partials/navbar') %> 
         <main role="main">    
+            <%- include('./partials/alert') %>
         <section class="">
             <div class="container">
                 <div class="row">
@@ -126,11 +127,42 @@
                         </div>
                     </div>
                 <% } %>
+                    <% if (!hasSavedNickname) { %>
+                        <div class="set-nickname-cta d-flex justify-content-center">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#modal-nickname">Nastavit vlastní přezdívku</a>
+                        </div>
+                    <% } %>
             </div>
         </section>
     </main>
+    
         <%- include('./partials/footer') %>
         <%- include('./partials/cookiesBar')%> 
+
+        <!-- Set nickname modal -->
+        <div class="modal fade" id="modal-nickname" tabindex="-1" aria-labelledby="modalWarning" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Nastavit přezdívku pro žebříček</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form action="/auth/user/changeNickname" method="POST" class="m-lg-3 m-2">
+                    <div class="modal-body">
+                        <input type="text" class="form-control bordered" id="nickname" name="nickname" placeholder="Vlastní jméno nebo přezdívka..." maxlength="16" required>
+                        <p class="text-small text-muted p-2 mb-0">maximálně 16 znaků</p>
+                        <div class="d-flex justify-content-center">
+                            <button class="btn btn-danger" type="submit">
+                                Uložit
+                            </button>
+                        </div>
+                    </div>
+                    
+                </form>
+            </div>
+            </div>
+        </div>
+
         <!-- JS for Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
