--- a/public/css/leaderboard.css
+++ b/public/css/leaderboard.css
@@ -6,6 +6,20 @@ main {
     padding-bottom: 2rem;
 }
 
+#modal-share .modal-content {
+    background: linear-gradient(to bottom, rgba(232, 15, 136, 1), rgba(175, 1, 113, 1));
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-bottom: 2rem;
+    width: 650px;
+    height: 800px;
+    padding-top: 100px;
+}
+
+#modal-share {
+    zoom: 180%
+}
+
 .headline {
     color: white;
     font-weight: 800;
